<resources>
    <string name="INITIALIZED_DEFAULT_EXERCISES">INITIALIZED_DEFAULT_EXERCISES</string>

    <string name="app_name">PrWorkoutTracker</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="nav_home_title">All Exercises</string>
    <string name="nav_workouts_title">Workouts</string>
    <string name="nav_categories_title">Categories</string>
    <string name="nav_calendar_title">Calendar</string>

    <string name="default_report_error_message">Oops, something went wrong if you see this please report it to: </string>
    <string name="dev_email">silas.timothy10@gmail.com</string>
    <string name="exercise_page_title_placeholder">Exercise Title</string>
    <string name="exercise_page_content_placeholder">Exercise Data</string>
    <string name="exercise_page_share_button_placeholder">Share</string>
    <string name="exercise_page_explore_button_placeholder">Explore</string>
    <string name="addExerciseNameHint">Exercise Name</string>
    <string name="addExerciseWeightHint">Exercise Weight</string>
    <string name="addExerciseUnitSpinnerPrompt">Unit</string>
    <string name="EXERCISE_TAG">EXERCISE</string>
    <string name="defaultAddToExerciseAmount">2.5</string>
    <string name="exercise_sort_spinner_prompt">Select how to sort exercises</string>
    <string name="lists_sort_spinner_title_text">Sort By:</string>
    <string name="add_exercise_name_default">Exercise</string>
    <string name="add_category_name_default">Category</string>
    <string name="add_exercise_weight_default">0.0</string>
    <string name="add_exercise_confirm_snackbar">Added Exercise \"%1$s\"!</string>
    <string name="add_category_confirm_snackbar">Added Category \"%1$s\"!</string>
    <string name="remove_exercise_dialog_title">Are you sure you want to remove this exercise?</string>
    <string name="addCategoryNameHint">Category Name</string>
    <string name="category_id_arg_tag">CATEGORY_TO_SORT_BY</string>
    <string name="exercise_page_category_title">Category:</string>
    <string name="exercise_category_label_default_text">Default Category</string>
    <string name="exercise_category_label_prefix">Displaying Category:</string>
    <string name="category_name_arg_tab">CATEGORY_NAME_TO_SORT_BY</string>
    <string name="add_exercise_category_textview">Category:</string>
    <string name="add_exercise_category_no_category_selected">No Category</string>
    <string name="barbell_image_desc">empty barbell</string>
    <string name="args_null_during_exercise_creation">Args were null when trying to inflate exercise fragment</string>
    <string name="exercise_null_during_exercise_creation">exercise is null while trying to inflate exercise fragment</string>
    <string name="category_null_during_exercise_creation">list of categories null while trying to inflate exercise fragment</string>
    <string name="exercise_search_button_text">Search</string>
    <string name="exercise_frag_title">Exercises</string>
    <string name="category_frag_title">Categories</string>
    <string name="exercise_search_hint">Search exercises</string>
    <string name="PREFS_FILE">PREFS_FILE</string>
    <string name="JSON_KEYS_exercise_array">exercises</string>
    <string name="JSON_KEYS_category_array">categories</string>
    <string name="JSON_KEYS_exercise_name">name</string>
    <string name="JSON_KEYS_exercise_weight">weight</string>
    <string name="JSON_KEYS_exercise_key">weightUnit</string>
    <string name="JSON_KEYS_exercise_category_name">categoryName</string>
    <string name="JSON_VALUES_exercise_no_category">none</string>
    <string name="JSON_KEYS_category_name">name</string>
</resources>
