<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <EditText
        android:id="@+id/addExerciseNameEditText"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/addExerciseNameHint"
        />

    <EditText
        android:id="@+id/addExerciseWeightEditText"
        android:inputType="numberDecimal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/addExerciseWeightHint"
        android:layout_below="@+id/addExerciseNameEditText"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/addExerciseWtUnitSpinner"
        />

    <Spinner
        android:id="@+id/addExerciseWtUnitSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:prompt="@string/addExerciseUnitSpinnerPrompt"
        android:layout_below="@+id/addExerciseNameEditText"
        android:layout_alignParentEnd="true"
        />

    <TextView
        android:id="@+id/addExerciseCategoryTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:textSize="@dimen/sort_spinner_text_size"
        android:layout_below="@+id/addExerciseWeightEditText"
        android:layout_toStartOf="@+id/addExerciseCategorySpinner"
        android:text="@string/add_exercise_category_textview"/>

    <Spinner
        android:id="@+id/addExerciseCategorySpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/sort_spinner_text_size"
        android:paddingTop="10dp"
        android:layout_below="@+id/addExerciseWtUnitSpinner"
        android:layout_alignParentEnd="true">
    </Spinner>

</RelativeLayout>